Fixed z-index on main panels

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  z-index: -1000;
 }
 
 .panel {
